[package]
name = "recursion"
version = "0.1.0"
edition = "2021"
default-run = "dynamic_fibonacci"

[[bin]]
name = "factorial"
path = "src/bin/factorial.rs"

[[bin]]
name = "fibonacci"
path = "src/bin/fibonacci.rs"

[[bin]]
name = "dynamic_fibonacci"
path = "src/bin/dynamic_fibonacci.rs"

[dependencies]
