[package]
name = "recursion"
version = "0.1.0"
edition = "2021"
default-run = "knights_tour"

[[bin]]
name = "factorial"
path = "src/bin/factorial.rs"

[[bin]]
name = "fibonacci"
path = "src/bin/fibonacci.rs"

[[bin]]
name = "dynamic_fibonacci"
path = "src/bin/dynamic_fibonacci.rs"

[[bin]]
name = "knights_tour"
path = "src/bin/knights_tour.rs"

[dependencies]
